<resources>
    <string name="app_name">Took and Save</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="your_image">Your image:</string>

    <string name="back">Back</string>
    <string name="your_photo">Your photo:</string>
    <string name="localization">Localization:</string>
    <string name="textview">TextView</string>
    <string name="additional_note">Additional note:</string>
    <string name="font_size">Font size</string>
    <string name="settings">Settings</string>
    <string name="choose_text_color">Choose text color:</string>
    <string name="notification_range">Notification range</string>
</resources>
